# otus_course_homework_2

./: CMakeLists.txt  CustomAllocator.h  SimpleContainer.h  main.cpp
.github/workflows/: release.yml
